Fix crash in header when regenerating view.

Unregister for geometry changes before reparenting, as
reparenting may trigger those changes.

Task-number: QTBUG-36481
Change-Id: Ia94f1f88880b232dd583b7e63e5da73fb338f7c6
Reviewed-by: Martin Jones <martin.jones@jollamobile.com>